third_party/move/move-compiler/transactional-tests/tests/parser/underscore.exp
processed 13 tasks

task 0 'publish'. lines 1-77:
Error: error[E03009]: unbound variable
   ┌─ TEMPFILE:32:9
   │
32 │         _  // undefined
   │         ^ Invalid variable usage. Unbound variable '_'

error[E02001]: duplicate declaration, item, or annotation
   ┌─ TEMPFILE:34:30
   │
34 │     public fun test8(_: u64, _: u64): u64 {
   │                      -       ^ Duplicate parameter with name '_'
   │                      │        
   │                      Previously declared here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ TEMPFILE:38:37
   │
38 │     inline fun fun9(x: u64, _: u64, _: u64): u64 {
   │                             -       ^ Duplicate parameter with name '_'
   │                             │        
   │                             Previously declared here

error[E02001]: duplicate declaration, item, or annotation
   ┌─ TEMPFILE:44:38
   │
44 │     inline fun fun10(x: u64, _: u64, _: |u64|u64): u64 {
   │                              -       ^ Duplicate parameter with name '_'
   │                              │        
   │                              Previously declared here

error[E04007]: incompatible types
   ┌─ TEMPFILE:48:9
   │
44 │     inline fun fun10(x: u64, _: u64, _: |u64|u64): u64 {
   │                                         -------- Expected: '|u64|u64'
   ·
48 │         fun10(4, 3, 2)
   │         ^^^^^^^^^^^^^^
   │         │           │
   │         │           Given: integer
   │         Invalid call of '0xC0FFEE::m::fun10'. Invalid argument for parameter '_'



task 1 'run'. lines 79-79:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 2 'run'. lines 81-81:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 3 'run'. lines 83-83:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 4 'run'. lines 85-85:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 5 'run'. lines 87-87:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 6 'run'. lines 89-89:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 7 'run'. lines 91-91:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 8 'run'. lines 93-93:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 9 'run'. lines 95-95:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 10 'run'. lines 97-97:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 11 'run'. lines 99-99:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}

task 12 'run'. lines 101-101:
Error: Function execution failed with VMError: {
    major_status: LINKER_ERROR,
    sub_status: None,
    location: undefined,
    indices: [],
    offsets: [],
}
